<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">TourGuideApp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Tab names -->
    <string name="people">People</string>
    <string name="sites">Sites</string>
    <string name="events">Events</string>


    <string name="mailChooserMsg">Select an App to send the email</string>
    <string name="label_where">Where:</string>
    <string name="label_when">When:</string>
    <string name="label_contact">Contact:</string>


    <string name="projects">Projects</string>
    <string name="label_due">Due date:</string>
    <string name="settings">Settings</string>
    <string name="search_hint">Search in our Company</string>
    <string name="Event_map_icon_description">Map Icon. Tap to open the map for the event</string>
    <string name="event_calendar_icon_description">Calendar Icon. Tap to add the event to your calendar</string>
    <string name="people_phone_icon_description">Phone Icon. Tap to call the person.</string>
    <string name="people_mail_icon_description">Mail Icon. Tap to send an email to the person.</string>
    <string name="people_photo_image_description">A photo/image for the user</string>
    <string name="project_mail_icon_description">Mail Icon. Tap to send an email to the contact person.</string>
    <string name="projcet_web_icon_description">Web Icon. Tap to open the website for the project</string>
    <string name="site_map_icon_description">Map Icon. Tap to open the map for the site</string>
    <string name="site_phone_icon_description">Phone Icon. Tap to call the site.</string>
    <string name="Main_activity_title">Explore our Company</string>
    <string name="Info_about_Project">Info about our project <xliff:g example="Virtual Reality Training" id="myProject">%s </xliff:g> </string>

    <!-- Site Objects attributes -->
    <string name="siteName1">Rome Office</string>
    <string name="siteName2">Milan Office</string>
    <string name="siteName3">Melfi Labs</string>
    <string name="siteCity1">Rome</string>
    <string name="siteCity2">Milan</string>
    <string name="siteCity3">Ravenna</string>
    <string name="siteAddress1">Via Francesco Benaglia 13</string>
    <string name="siteAddress2">Via Tolentino 2/A</string>
    <string name="siteAddress3">Via Aldo Moro 22</string>
    <string name="siteDescription1">Rome offices are located in…</string>
    <string name="siteDescription2">Milan offices are located in…</string>
    <string name="siteDescription3">Melfi Labs are located in…</string>
    <!-- People Objects attributes -->
    <string name="people_name_1">Lorenzo</string>
    <string name="people_name_2">Piero</string>
    <string name="people_name_3">Carol</string>
    <string name="people_name_4">Frank</string>
    <string name="people_name_5">Michelle</string>
    <string name="people_name_6">Laura</string>
    <string name="people_name_7">Alex</string>
    <string name="people_name_8">Michael</string>
    <string name="people_name_9">Anna</string>
    <string name="people_surname_1">Rutigliano</string>
    <string name="people_surname_2">Blasetti</string>
    <string name="people_surname_3">Brown</string>
    <string name="people_surname_4">Blaze</string>
    <string name="people_surname_5">Black</string>
    <string name="people_surname_6">Filmore</string>
    <string name="people_surname_7">Del Grande</string>
    <string name="people_surname_8">Giacchino</string>
    <string name="people_surname_9">Graemes</string>
    <string name="people_role_1">RD Manager</string>
    <string name="people_role_2">HS Project Manager</string>
    <string name="people_role_3">Training Project Manager</string>
    <string name="people_role_4">HS Consultant</string>
    <string name="people_role_5">HS Project Manager</string>
    <string name="people_role_6">Human Resources</string>
    <string name="people_role_7">Finance</string>
    <string name="people_role_8">Marketing</string>
    <string name="people_role_9">Marketing</string>
    <string name="people_email_1">l.rutigliano@igeam.it</string>
    <string name="people_email_2">p.blasetti@igeam.it</string>
    <string name="people_email_3">c.brown@igeam.it</string>
    <string name="people_email_4">f.blaze@igeam.it</string>
    <string name="people_email_5">m.black@igeam.it</string>
    <string name="people_email_6">l.filmore@igeam.it</string>
    <string name="people_email_7">a.delgrande@igeam.it</string>
    <string name="people_email_8">m.gioacchino@igeam.it</string>
    <string name="people_email_9">a.graemes@igeam.it</string>
    <!-- Project Objects attributes -->
    <string name="project_name_1">Virtual Reality Training</string>
    <string name="project_name_2">MSDS Software</string>
    <string name="project_url_2">http://www.sirios-chem.igeam.it/</string>
    <string name="project_due_date_1">30-09-2018</string>
    <string name="project_due_date_2">30–10-2018</string>
    <string name="project_description_1">Although virtual reality is receiving a lot of attention these days thanks to devices such as Oculus Rift and Gear VR, VR based training has been used by companies, academia, and military for a long time. Essentially VR based training puts the trainee in a 3D environment relevant to the subject matter via a specially designed audio-visual headset.
     \n The advantages of such an approach should be readily apparent. Not only can it cut out distractions, but it can totally immerse the trainee in the simulation, to the point where they begin to respond to it just as they would in a real-life situation.\n
      In other words, not only will trainees acquire information relevant to their job, but they can start practicing their skills right from day one.</string>
    <string name="project_description_2">Manage your organization\'s library of safety data sheets using Chemical Safety\'s cloud-based SDS management software. Employees can easily search and print manufacturer specific SDS\'s.</string>
    <string name="project_1_contact_person">Mary Ludrow</string>
    <string name="project_2_contact_person">Frank Red</string>
    <!-- Event Objects attributes -->
    <string name="event_name_0">Webinar on ISO 45001</string>
    <string name="event_name_1">Conference on Chemical Risk</string>
    <string name="event_description_0">Our ISO 45001:2018 Overview course delivered by webinar will provide details of the new terms, definitions and key requirements of ISO 45001:2018.
                \n The session will offer an in-depth insight into the origins of the standard, the main changes compared to OHSAS 18001, the High Level Structure and details of how to interpret and apply stakeholder requirements with regards to risk management.\n
                The course will provide world class instruction on how to understand ISO 45001:2018 delivered using an interactive online, live tutor led webinar.
    </string>
    <string name="event_description_1">You are invited to share your experience with others by submitting a paper for the Hazards Australasia 2018 technical programme.
    \n The technical programme will be constructed around a compelling line-up of invited keynote speakers, who will provide a strategic view from industry, academe and the regulator. Technical presentations should review best practice and latest research in the functional areas that are fundamental to managing process safety effectively. Papers are encouraged from a range of industry sectors on the themes listed opposite.
        \n\n Hazards is an international event and whilst the conference is primarily focused on the Australasian chemical and process industries, contributions are welcomed from all regions where the process safety challenge is being addressed.
    </string>
    <string name="event_contact_1">Mary Anderson</string>
    <string name="event_contact_0">Frank Pearson</string>
    <string name="event_location_address_0">Via delle Fornaci 2</string>
    <string name="event_location_address_1">Via della Maglianella 65</string>
    <string name="event_city_0">Roma</string>
    <string name="event_city_1">Milano</string>

</resources>
