<?xml version="1.0" encoding="utf-8"?>


<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/eventFrameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/myCardViewStyle">

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/eventImg"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:alpha="1"
                android:scaleType="centerCrop"
                android:src="@drawable/img45001"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/eventTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#E6FFFFFF"
                android:autoSizeTextType="uniform"
                android:gravity="start|center_horizontal"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/material_text_display1"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/eventImg"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Webinar on ISO 45001" />

            <TextView
                android:id="@+id/eventDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                tools:text="We are proud to announce the 2018 Global Reach Conference."
                android:justificationMode="inter_word"
                android:maxLines="8"
                android:ellipsize="end"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eventImg"
                tools:textSize="@dimen/material_text_subhead" />

            <TextView
                android:id="@+id/lbl_Where"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/label_where"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eventDescription" />

            <TextView
                android:id="@+id/eventLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/eventContact"
                app:layout_constraintTop_toBottomOf="@+id/eventDescription"
                tools:text="Via Nazionale 12" />

            <ImageButton
                android:id="@+id/eventMapButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:background="@android:color/white"
                app:layout_constraintBottom_toBottomOf="@+id/eventLocation"
                app:layout_constraintStart_toEndOf="@+id/eventLocation"
                app:srcCompat="@drawable/ic_map" />

            <TextView
                android:id="@+id/lbl_dueDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/label_when"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lbl_Where" />

            <TextView
                android:id="@+id/eventDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/eventLocation"
                app:layout_constraintTop_toBottomOf="@+id/eventLocation"
                tools:text="TextView" />

            <TextView
                android:id="@+id/lblContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/label_contact"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lbl_dueDate" />

            <TextView
                android:id="@+id/eventContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/lblContact"
                app:layout_constraintTop_toBottomOf="@+id/eventDate"
                tools:text="James Green" />

            <ImageButton
                android:id="@+id/eventCalendarBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                app:layout_constraintBottom_toBottomOf="@+id/eventDate"
                app:layout_constraintStart_toStartOf="@+id/eventMapButton"
                app:srcCompat="@drawable/ic_event" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>
</FrameLayout>

